--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@next/font": "13.1.1",
         "axios": "^1.3.4",
+        "classnames": "^2.3.2",
         "create-next-app": "^13.1.1",
         "next": "13.1.1",
         "next-themes": "^0.2.1",
@@ -20,6 +21,8 @@
         "sass": "^1.58.3"
     },
     "devDependencies": {
+        "@heroicons/react": "^2.0.13",
+        "@types/jest": "^29.5.0",
         "@types/node": "18.11.18",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
@@ -31,6 +34,7 @@
         "prettier": "2.8.1",
         "prettier-plugin-tailwindcss": "^0.2.1",
         "tailwindcss": "^3.2.4",
+        "ts-jest": "^29.0.5",
         "typescript": "4.9.4"
     }
 }
